crates/core/tests/ui_attr/attr_on_struct.rs
#[devirt::devirt(Foo)]
struct Foo {
    val: i32,
}

fn main() {}
